--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,14 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Contact</h2>
+    <h2 class="footer-heading">Kontakt</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>Department Informatik</li>
+          <li>HAW Hamburg</li>
         </ul>
       </div>
 
