--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,12 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Kontakt</h2>
+    <h2 class="footer-heading"><a name="contact"></a>Kontakt</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
+          <li>Duc M. Nguyen</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           <li>Department Informatik</li>
           <li>HAW Hamburg</li>
