--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,11 @@
       <div class="trigger">
 
         {% for page in site.pages %}
-          <!-- {% if page.title %} -->
+          {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          <!-- {% endif %} -->
+          {% endif %}
         {% endfor %}
+          <a class="page-link" href="#contact">Kontakt</a>
       </div>
     </nav>
 
